<resources>
    <string name="app_name">Product Tracker</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Product Tracker</string>
    <string name="nav_header_subtitle">leocruciani@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="action_language">Language</string>

    <string name="menu_home">Home</string>
    <string name="menu_sale_calendar">Sale Calendar</string>
    <string name="menu_product_manager">Product Manager</string>

    <!--Product List Strings    -->
    <string name="product_list">Product List</string>
    <string name="product_page">Product Page</string>
    <string name="product_name">Product Name</string>
    <string name="product_image">Product Image</string>
    <string name="add">ADD</string>
    <string name="quantity">QUANTITY</string>
    <string name="sell">SELL</string>
    <string name="price">PRICE</string>
    <string name="type">TYPE</string>
    <string name="color">COLOR</string>
    <string name="number">Number</string>
    <string name="todo">TODO</string>
    <string name="wallets">WALLETS</string>
    <string name="gloves_scarfs">GLOVES &amp; SCARFS</string>
    <string name="suitcases">SUITCASES</string>
    <string name="belts">BELTS</string>
    <string name="accessories">ACCESSORIES</string>
    <string name="bags">BAGS</string>
    <string name="date">DATE</string>
    <string name="id">ID</string>

    <string-array name="allowed_types">
        <item>bag</item>
        <item>wallet</item>
        <item>gloves/scarf</item>
        <item>suitcase</item>
        <item>belt</item>
        <item>accessory</item>
    </string-array>

    <!--Product Manager Strings    -->
    <!--Edit Delete Product Strings    -->
    <string name="edit_or_delete_product">Edit or delete product</string>
    <string name="choose_option">Choose an option</string>
    <string name="edit_option">Edit</string>
    <string name="delete_option">Delete</string>
    <!--Create New Product Strings    -->
    <string name="create_new_product">Create new product</string>
    <string name="create">CREATE</string>
    <string name="select_picture">Select Picture</string>
    <string name="select_from_gallery">Select from Gallery</string>
    <string name="take_picture">Take Picture</string>
    <string name="product_created_success">Product has been created successfully</string>
    <string name="product_creation_failed">Product creation has failed</string>
    <!--Product Activity toasts -->
    <string name="toast_not_enough_quantity">Not enough quantity available</string>
    <string name="toast_product_sold_success">Product sold successfully!</string>
    <string name="toast_failed_update_quantity">Failed to update product quantity</string>
    <string name="toast_failed_record_sale">Failed to record sale</string>
    <string name="toast_product_added_success">Product added successfully!</string>
    <string name="toast_product_updated">Product quantity updated successfully</string>
    <string name="toast_failed_update">Failed product quantity update</string>
    <string name="no_products_found">No products found</string>
</resources>