<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.product_tracker.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_nav_home_to_nav_slideshow"
            app:destination="@id/nav_manage_product" />
        <action
            android:id="@+id/action_nav_home_to_nav_sale_calendar"
            app:destination="@id/nav_sale_calendar" />
    </fragment>

    <fragment
        android:id="@+id/nav_manage_product"
        android:name="com.example.product_tracker.ui.product_manager.ProductManagerFragment"
        android:label="@string/menu_product_manager"
        tools:layout="@layout/fragment_product_manager" >
        <action
            android:id="@+id/action_nav_manage_product_to_nav_home"
            app:destination="@id/nav_home" />
        <action
            android:id="@+id/action_nav_manage_product_to_nav_sale_calendar"
            app:destination="@id/nav_sale_calendar" />
    </fragment>

    <activity
        android:id="@+id/nav_sale_calendar"
        android:name="com.example.product_tracker.ui.sale_calendar.SaleCalendarActivity"
        android:label="@string/menu_sale_calendar" />


</navigation>