<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
android:layout_width="match_parent"
android:layout_height="wrap_content"
android:orientation="vertical">


<!-- Product picture -->
    <ImageView
        android:id="@+id/productImageView"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:scaleType="centerCrop"
        android:contentDescription="@string/product_image" />

    <!-- Product price -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/priceTextViewFixed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:layout_weight="1"
            android:text="@string/price"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/priceTextView"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="40dp"
            android:layout_weight="1"
            android:textSize="16sp"
            android:textStyle="bold" />

    </LinearLayout>

    <!-- Product price -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/typeTextViewFixed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:layout_weight="1"
            android:text="@string/type"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/typeTextView"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="40dp"
            android:layout_weight="1"
            android:textSize="16sp"
            android:textStyle="bold" />

    </LinearLayout>

    <!-- Product color -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/colorTextViewFixed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:layout_weight="1"
            android:text="@string/color"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/colorTextView"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="40dp"
            android:layout_weight="1"
            android:textSize="16sp"
            android:textStyle="bold" />

    </LinearLayout>
    <!-- Product price -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/quantityTextViewFixed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:layout_weight="1"
            android:text="@string/quantity"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/quantityTextView"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="40dp"
            android:layout_weight="1"
            android:textSize="16sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="110dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button2"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="30dp"
            android:text="@string/sell" />

        <EditText
            android:id="@+id/inputField2"
            android:layout_width="75dp"
            android:layout_height="50dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="30dp"
            android:layout_marginEnd="40dp"
            android:hint="@string/number"
            android:autofillHints="Number"
            android:inputType="number"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="110dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button1"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="30dp"
            android:text="@string/add" />

        <EditText
            android:id="@+id/inputField1"
            android:layout_width="75dp"
            android:layout_height="50dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="30dp"
            android:layout_marginEnd="40dp"
            android:hint="@string/number"
            android:autofillHints="Quantity"
            android:inputType="number"/>
    </LinearLayout>

</LinearLayout>