<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:ignore="MissingDefaultResource">


    <!-- Product picture -->
    <ImageButton
        android:id="@+id/productLoadImageButton"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:scaleType="center"
        android:contentDescription="@string/product_image"
        android:src="@drawable/ic_menu_gallery" />

    <!-- Product price -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/priceTextViewFixed"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:layout_weight="0.5"
            android:text="@string/price"
            android:layout_gravity="center"
            android:textSize="16sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/loadPriceTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="40dp"
            android:layout_weight="0.5"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:gravity="end"
            android:autofillHints="@string/price"
            android:inputType= "numberDecimal"
            android:hint="@string/price"/>
    </LinearLayout>

    <!-- Product price -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginBottom="20dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/typeTextViewFixed"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:layout_weight="0.5"
            android:layout_gravity="center"
            android:text="@string/type"
            android:textSize="16sp"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/loadTypeSpinner"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="40dp"
            android:layout_gravity="center"
            android:layout_weight="0.5"
            android:textSize="16sp"
            android:textStyle="bold"
            android:gravity="end"
            android:autofillHints="@string/type"
            android:spinnerMode="dropdown" />

    </LinearLayout>

    <!-- Product color -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginBottom="20dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/colorTextViewFixed"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:layout_weight="0.5"
            android:text="@string/color"
            android:textSize="16sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/loadColorTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="40dp"
            android:layout_weight="0.5"
            android:layout_gravity="center"
            android:textSize="16sp"
            android:textStyle="bold"
            android:gravity="end"
            android:autofillHints="@string/color"
            android:inputType="text"
            android:hint="@string/color"/>

    </LinearLayout>
    <!-- Product price -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginBottom="20dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/quantityTextViewFixed"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:layout_weight="0.5"
            android:layout_gravity="center"
            android:text="@string/quantity"
            android:textSize="16sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/loadQuantityTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="40dp"
            android:layout_weight="0.5"
            android:textSize="16sp"
            android:textStyle="bold"
            android:gravity="end"
            android:autofillHints="@string/quantity"
            android:inputType="text"
            android:hint="@string/quantity"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginBottom="30dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/idTextViewFixed"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:layout_weight="0.5"
            android:text="@string/id"
            android:textSize="16sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/loadIdTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="40dp"
            android:layout_weight="0.5"
            android:textSize="16sp"
            android:textStyle="bold"
            android:gravity="end"
            android:autofillHints="@string/id"
            android:inputType="text"
            android:hint="@string/id"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:gravity="center">

        <Button
            android:id="@+id/createNewProductButton"
            android:layout_width="250dp"
            android:layout_height="60dp"
            android:text="@string/create" />

    </LinearLayout>

</LinearLayout>